packages/ui/assets/css/components/modal.css
$gap: 16px;
$button-height: 40px;
$container-width: 688px;

$modal-width: 760px;
$modal-aside-width: 320px;
$modal-aside-width-medium: 50vw;
$modal-aside-width-large: 75vw;

aw-modal {
    display: none;
}

body.has-modal-default,
body.has-modal-fullscreen,
body.has-modal-bottom {
    overflow: hidden;
}

.aw-modal {
    @apply z-100 fixed inset-0;
    overflow: auto;
    padding: 0!important;

    &:focus {
        outline: none;
    }

    &__container {
        @apply relative flex w-full min-h-screen justify-center items-center p-0;
        height: max-content;

        &:before {
            content: '';
            @apply absolute block inset-0 bg-overlay opacity-50;
        }
    }

    &__dialog {
        @apply relative max-w-full m-auto bg-surface;
    }

    &__header {
        @apply flex items-center justify-start px-6 pt-6;
    }

    &__content {
        @apply mx-auto p-6;
        max-width: var(--ui-container-width, $container-width)
    }

    &__content--buttons {
        @apply pb-16;
    }

    &__back,
    &__close {
        @apply flex-shrink-0 flex justify-center items-center;
        height: $button-height;
        width: $button-height;
        line-height: $button-height - $gap;
        opacity: .5;
        transition: 200ms opacity;

        > svg {
            display: inline-block;
            vertical-align: middle;
        }

        &:hover {
            opacity: 1;
        }
    }

    &__close {
        @apply absolute;
        top: theme('spacing.4');
        right: theme('spacing.3');
    }

    &__title {
        @apply m-0 text-center text-xl leading-tight font-heading font-medium truncate;
    }

    &__subtitle {
        @apply px-6 text-sm truncate font-body text-grey;
    }

    &__buttons {
        @apply fixed bottom-0 w-full bg-surface;
    }

    /**
     * Modifiers
     */

    &.is-default &__dialog {
        @apply p-0 w-screen min-h-screen;
    }

    &.is-default &__back {
        @apply hidden;
    }

    &.is-default &__header {
        @apply pb-0
    }

    &.is-fullscreen &__container,
    &[class*="is-aside"] &__container {
        @apply p-0 overflow-hidden;
    }

    &.is-fullscreen &,
    &[class*="is-aside"] & {
        &__dialog {
            @apply flex flex-col w-full max-w-full p-0 h-full min-h-screen overflow-hidden;
        }

        &__body {
            overflow: auto;
        }
    }

    &[class*="is-aside"] {
        left: auto;
        min-width: $modal-aside-width;
        width: $modal-aside-width;
        max-width: 100vw;
        z-index: 99;
        box-shadow: 0 0 20px rgba(0,0,0,.1);
    }

    &[class*="is-aside"] &__back {
        @apply hidden;
    }

    &.is-aside-medium {
        width: $modal-aside-width-medium;
    }

    &.is-aside-large {
        width: $modal-aside-width-large;
    }

    &.is-bottom {
        @apply overflow-hidden;
    }

    /* &.is-bottom &__header {
        @apply py-1 pr-1;
        z-index: 1;
    } */

    &.is-bottom &__dialog {
        @apply absolute bottom-0 left-0 w-full flex flex-col overflow-hidden;
        top: 50%;
    }

    &.is-bottom &__back {
        @apply hidden;
    }

    &.is-bottom &__body {
        @apply overflow-auto;
    }
}

@media (max-width: theme('sceens.sm')) {
    .aw-modal {

        &.is-fullscreen &__title {
            text-align: center;
        }

        &[class*="is-aside"] &__back {
            display: none;
        }
    }
}

@screen md {

    .aw-modal {

        &:not(.is-aside) &__header {
            @apply items-start justify-center;
        }

        &__container {
            @apply p-16;
        }

        &:not(.is-aside) &__title {
            @apply font-normal text-3xl mt-3;
        }

        &:not(.is-aside) &__title,
        &:not(.is-aside) &__subtitle {
            @apply text-center;
        }

        &:not(.is-aside) &__content,
        &__content--buttons {
            @apply p-8;
        }

        &__buttons {
            @apply static;
        }

        &.is-default {
            @apply flex pt-16 px-16;
        }

        &.is-default &__back,
        &.is-bottom &__back {
            @apply block h-0 invisible overflow-hidden;
        }

        &.is-bottom &__content {
            @apply px-0;
        }

        &.is-default &__dialog {
            @apply h-auto min-h-0;
            width: $modal-width;
        }

        &.is-fullscreen &__header {
            @apply pt-16;
        }

        &.is-fullscreen &__close {
            @apply absolute;
            top: theme('spacing.16');
            right: theme('spacing.16');
        }
    }
}

@screen lg {
    .aw-modal {
        &.is-default &__content {
            @apply px-0;
        }
    }
}

/**
 * Transitions
 */

$modal-t-dur: 250ms;

.modal-transition-default {

    &-enter,
    &-leave-to {
        opacity: 0;
    }

    &-enter-active,
    &-leave-active {
        pointer-events: none;
        backface-visibility: hidden;
        transform: translate3d(0,0,0);
    }


    &-enter-active {
        transition: $modal-t-dur opacity ease-out-quart;
    }

    &-leave-active {
        transition: $modal-t-dur opacity;
    }
}

@screen md {
    .modal-transition-default {

        &-enter,
        &-leave-to {
            .aw-modal__dialog {
                opacity: 0;
                transform: translateY(calc(-2 * $gap));
            }
        }

        &-enter-active {
            transition: calc($modal-t-dur * 1.5) opacity;

            .aw-modal__dialog {
                transition: $modal-t-dur transform calc($modal-t-dur * .5) ease-out-quart, calc($modal-t-dur * .5) opacity calc($modal-t-dur * .5);
            }
        }

        &-leave-active {
            transition: $modal-t-dur opacity calc($modal-t-dur * .5);

            .aw-modal__dialog {
                transition: $modal-t-dur transform, $modal-t-dur opacity;
            }
        }
    }
}


/* fullscreen */
.modal-transition-fullscreen {

    &-enter,
    &-leave-to {
        transform: scale(1.1);
        opacity: 0;
    }

    &-enter-active {
        transition: $modal-t-dur transform ease-out-quart, $modal-t-dur opacity ease-out-quart;
    }

    &-leave-active {
        transition: $modal-t-dur transform, calc($modal-t-dur * .67) opacity calc($modal-t-dur * .33);
    }
}


/* aside */
.modal-transition-aside {

    &-enter,
    &-leave-to {
        transform: translateX(100%);
    }

    &-enter-active {
        transition: $modal-t-dur transform ease-out-quart;
    }

    &-leave-active {
        transition: $modal-t-dur transform;
    }
}


.modal-transition-aside-medium,
.modal-transition-aside-large {

    &-enter {
        transform: translateX($modal-aside-width);
        opacity: 0;
    }

    &-leave-to {
        transform: translateX(100%);
        opacity: 0;
    }

    &-enter-active {
        transition: $modal-t-dur transform ease-out-quart, calc($modal-t-dur *.67) opacity ease-out-quart;
    }

    &-leave-active {
        transition: $modal-t-dur transform, calc($modal-t-dur *.67) opacity calc($modal-t-dur *.33);
    }
}

@screen md {

    .modal-transition-aside-medium,
    .modal-transition-aside-large {
        &-enter {
            transition-duration: calc($modal-t-dur * 2);
        }

        &-leave-to {
            transition-duration: calc($modal-t-dur * 1.5);
        }
    }
}

/* aside */
.modal-transition-bottom {

    &-enter,
    &-leave-to {
        opacity: 0;

        .aw-modal__dialog {
            transform: translateY(100%);
        }
    }

    &-enter-active {
        transition: $modal-t-dur opacity ease-out-quart;

        .aw-modal__dialog {
            transition: $modal-t-dur transform ease-out-quart;
        }
    }

    &-leave-active {
        transition: $modal-t-dur opacity ease-out-quart;

        .aw-modal__dialog {
            transition: $modal-t-dur transform;
        }
    }
}

